--- a/index.html
+++ b/index.html
@@ -7,6 +7,33 @@
   <link rel="stylesheet" href="./main.css">
 </head>
 <body>
-  <p>Hello world</p>
-</body>
+
+    <!-- IF YOU ARE GIVEN THE HEADER, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
+    <header class="heading">
+
+    </header>
+
+    <main class="main">
+
+<!-- IF YOU ARE GIVEN THE ABOUT SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->        
+        <section class="section-about">
+
+        </section>
+<!-- IF YOU ARE GIVEN THE ROOMS SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
+        <section class="section-rooms">
+
+        </section>
+<!-- IF YOU ARE GIVEN THE FACILITIES SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
+        <section class="section-facilities">
+
+        </section>
+<!-- IF YOU ARE GIVEN THE CTA SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
+        <section class="section-cta">
+
+        </section>
+    </main>
+<!-- IF YOU ARE GIVEN THE FOOTER, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
+    <footer class="footer">
+
+    </footer>
 </html>
