--- a/index.html
+++ b/index.html
@@ -6,34 +6,130 @@
   <title>EstyHotels | Landing Page</title>
   <link rel="stylesheet" href="./main.css">
 </head>
+
 <body>
+  <!-- This is the header at the top of the page showing booking time -->
+  <header class="header container">
+    <p>BOOKING 8AM-10PM </p>
+    <div class="right">
+      <img src="./assets/icons/call.svg" />
+      <p>070-XXX-XXX-XX</p>
+      <p>USD</p>
+      <p>ENGLISH</p>
+    </div>
+  </header>
 
-    <!-- IF YOU ARE GIVEN THE HEADER, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
-    <header class="heading">
+  <!-- This hero is a section on it's own -->
+  <section class="hero">
+    <nav class="navbar"></nav>
+    <section class="hero__main"></section>
+  </section>
 
+  <!-- The orange section containing check-in info -->
+  <section class="availability"></section>
+  <!-- The about us section -->
+  <section class="about-us"></section>
+  <!-- Rooms section -->
+  <section class="rooms"></section>
+
+  <!-- Facilities secction -->
+  <section class="facilities container">
+    <header>
+      <h2 class="heading">OUR FACILITIES</h2>
+      <p class='paragraph'>
+        Esty Hotel offers the best facilities that meets your demand <br>
+        we have so many of our facilities to show you
+      </p>
     </header>
 
-    <main class="main">
+    <div class="facilities_list">
+      <ul>
+        <li>
+          <img class="facilities-image" src="./assets/pool.png" />
+          <p class="facility_name">SWIMMING POOL</p>
+          <p class="facility_desc">
+            Where our guest can take a swim in our swimming pool
+          </p>
+        </li>
+        <li>
+          <img class="facilities-image" src="./assets/spa.png" />
+          <p class="facility_name">SPA</p>
+          <p class="facility_desc">
+            Where our guest can have a soothing spa experience
+          </p>
+        </li>
+        <li>
+          <img class="facilities-image" src="./assets/restaurant.png" />
+          <div class="facility">
+            <p class="facility_name">RESTAURANT</p>
+            <p class="facility_desc">
+              Our guest can be entertained in our well desgined restaurant
+            </p>
+          </div>
+        </li>
+      </ul>
+    </div>
 
-<!-- IF YOU ARE GIVEN THE ABOUT SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->        
-        <section class="section-about">
+    <div class="facilities_list">
+      <ul>
+        <li>
+          <img class="facilities-image" src="./assets/bar.png" />
+          <p class="facility_name">BAR</p>
+          <p class="facility_desc">
+            Where you can relax and serve the best drinks
+          </p>
+        </li>
+        <li>
+          <img class="facilities-image" src="./assets/lounge.png" />
+          <p class="facility_name">LOUNGE</p>
+          <p class="facility_desc">Beautiful and well conducive lounge</p>
+        </li>
+        <li>
+          <img class="facilities-image" src="./assets/meeting-room.png" />
+          <p class="facility_name">MEETING ROOM</p>
+          <p class="facility_desc">
+            Hold your seminar,board meetings, training at our 50 seater
+            meeting room
+          </p>
+        </li>
+      </ul>
+    </div>
+  
+    <!-- button -->
+    <div class='button'>
+      <button class='btn btn--primary btn_large'>BROWSE GALLERY</button>
+    </div>
+  </section>
+  <!-- Facilities section ends  -->
 
-        </section>
-<!-- IF YOU ARE GIVEN THE ROOMS SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
-        <section class="section-rooms">
 
-        </section>
-<!-- IF YOU ARE GIVEN THE FACILITIES SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
-        <section class="section-facilities">
+  <!-- Contact us section -->
+  <section class="cta">
+    <h1 class="heading">CONTACT US</h1>
 
-        </section>
-<!-- IF YOU ARE GIVEN THE CTA SECTION, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
-        <section class="section-cta">
+    <div class="form_wrapper">
+        <h2>Get in touch</h2>
+        <form action="" class="form">
 
-        </section>
-    </main>
-<!-- IF YOU ARE GIVEN THE FOOTER, YOU WILL DESIGN THIS SECTION AND PLEASE DONT TRESSPASS -->
-    <footer class="footer">
+          <div class="form-control">
+            <label for="name"></label>
+            <input type="text" name="name" id="name" placeholder="Your Name" />
+          </div>
 
-    </footer>
+          <div class="form-control">
+            <label for="email"></label>
+            <input type="email" name="email" id="email" placeholder="Your Email" />
+          </div>
+
+          <button class="btn btn--secondary btn_small">SEND</button>
+        </form>
+    </div>
+  </section>
+  <!-- contact us section ends -->
+
+
+  <!-- Footer section -->
+  <footer class="footer"></footer>
+
+</body>
 </html>
