--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
 
           <div class="form-control">
             <label for="name"></label>
-            <input type="text" name="name" id="name" placeholder="Your Name" />
+            <input type="text" name="name" class="input" id="name" placeholder="Your Name" />
           </div>
 
           <div class="form-control">
             <label for="email"></label>
-            <input type="email" name="email" id="email" placeholder="Your Email" />
+            <input type="email" name="email" class="input" id="email" placeholder="Your Email" />
           </div>
 
           <button class="btn btn--secondary btn_small">SEND</button>
