--- a/index.html
+++ b/index.html
@@ -4,20 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>EstyHotels | Landing Page</title>
+
+
+  <!----css---->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="./main.css">
+
 </head>
 
 <body>
   <!-- This is the header at the top of the page showing booking time -->
-  <header class="header container">
+  <header class="header container-fluid" id="home">
     <p>BOOKING 8AM-10PM </p>
     <div class="right">
-      <img src="./assets/icons/call.svg" />
-      <p>070-XXX-XXX-XX</p>
-      <p>USD</p>
-      <p>ENGLISH</p>
+      <img src="./assets/icons/call.svg"/>
+      <p class="header-item" id="number">070-XXX-XXX-XX</p>
+      <p class="header-item">USD</p>
+      <p class="header-item">ENGLISH</p>
     </div>
   </header>
+
+  <section class="intro">
+    <div class="container-fluid">
+  <!----navbar---->
+  <nav class="navbar navbar-expand-lg navbar-dark">
+
+    <a class="navbar-brand" href=""><img src="assets\icons\logo.svg" /></a>
+
+     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+         </button>
+
+      <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+
+        <ul class="navbar-nav ml-auto">
+        <li class="nav-item"><a class="nav-link" href="#home" style="color:#D66939"> Home </a></li>
+        <li class="nav-item"><a class="nav-link" href="#our-rooms"> Rooms </a></li>
+        <li class="nav-item"><a class="nav-link" href="#facilities"> Services </a></li>
+        <li class="nav-item"><a class="nav-link" href="#about-esty"> About us </a></li>
+        <li class="nav-item"><a class="nav-link" href=""> Blog </a></li>
+        <li class="nav-item"><a class="nav-link" href="#contact-us"> Contact us </a></li>
+
+        </ul>
+        </div>
+    </nav>
+
+
+    </div>
+
+  </section>
+
+  <section class="intro" id="title">
+    <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="assets\hero-img.png" width="1790" height="1192" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets\diamond-room.png" width="1790" height="1192" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="assets\ruby-room.png" width="1790" height="1192" class="d-block w-100" alt="...">
+        </div>
+      </div>
+    </div>
+    <div class="main-heading">
+      <h2 class="small-heading">Welcome</h1>
+      <hr id="headrule1" />
+      <hr id="headrule2" />
+      <h1> <span class="big-heading">ENJOY EXQUISITE COMFORT</span></h1>
+      <button type="button" class="btn-book">Book Now</button>
+    </div>
+
+  </section>
 
   <!-- This hero is a section on it's own -->
   <section class="hero">
@@ -28,12 +87,12 @@
   <!-- The orange section containing check-in info -->
   <section class="availability"></section>
   <!-- The about us section -->
-  <section class="about-us"></section>
+  <section class="about-us" id="about-esty"></section>
   <!-- Rooms section -->
-  <section class="rooms"></section>
+  <section class="rooms" id="our-rooms"></section>
 
   <!-- Facilities secction -->
-  <section class="facilities container">
+  <section class="facilities container" id="facilities">
     <header>
       <h2 class="heading">OUR FACILITIES</h2>
       <p class='paragraph'>
@@ -94,7 +153,7 @@
         </li>
       </ul>
     </div>
-  
+
     <!-- button -->
     <div class='button'>
       <button class='btn btn--primary btn_large'>BROWSE GALLERY</button>
@@ -104,7 +163,7 @@
 
 
   <!-- Contact us section -->
-  <section class="cta">
+  <section class="cta" id="contact-us">
     <h1 class="heading">CONTACT US</h1>
 
     <div class="form_wrapper">
@@ -131,5 +190,10 @@
   <!-- Footer section -->
   <footer class="footer"></footer>
 
+  <!-----Boostrap js and jquery---->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </body>
 </html>
